@@ -448,6 +448,7 @@ powerpc*-*-*)
 	extra_headers="${extra_headers} bmi2intrin.h bmiintrin.h"
 	extra_headers="${extra_headers} xmmintrin.h mm_malloc.h emmintrin.h"
 	extra_headers="${extra_headers} mmintrin.h x86intrin.h"
+	extra_headers="${extra_headers} pmmintrin.h"
 	extra_headers="${extra_headers} ppu_intrinsics.h spu2vmx.h"
 	extra_headers="${extra_headers} vec_types.h si2vmx.h"
 	extra_headers="${extra_headers} paired.h amo.h"
