@@ -1,3 +1,8 @@
+2018-10-22  Paul A. Clarke  <pc@us.ibm.com>
+
+	* config/rs6000/pmmintrin.h: New file.
+	* config.gcc (powerpc*-*-*): Add pmmintrin.h to extra_headers.
+
 2018-04-23  Paul A. Clarke  <pc@us.ibm.com>
 
 	PR target/83402
